# realtime-fluid-sim-cuda

./: .gitignore  CMakeLists.txt  README.md  build.bat
config/: sim.json
include/: FluidSolver.hpp  Grid.hpp  Renderer.hpp  Simulation.hpp  cuda_kernels.cuh
src/: FluidSolver.cpp  Grid.cpp  Renderer.cpp  Simulation.cpp  cuda_kernels.cu  main.cpp
